src/test/deca/syntax/valid/without_class/successive_backslash_and_quote_mark.deca
// Description :
//    test de la détection d'un backslash suivi d'un guillemet dans une chaîne de caractère
//
// Resultats :
//    ok
//
// Historique:
//    cree le 06/01/2023

{
    print("Vive \\"Deca\"\\");
}